modified:   main/pods_status.html

--- a/dashboard/templates/main/pods_status.html
+++ b/dashboard/templates/main/pods_status.html
@@ -144,7 +144,7 @@
     </div>
 
     {% if pods %}
-    <div class="overflow-x-auto">
+    <div>
         <table class="min-w-full divide-y divide-gray-200" id="podsTable">
             <thead class="bg-gray-50">
                 <tr>
