--- a/dashboard/templates/main/zones_list.html
+++ b/dashboard/templates/main/zones_list.html
@@ -121,7 +121,7 @@
     </div>
 
     {% if zones %}
-    <div class="overflow-x-auto">
+    <div>
         <table class="min-w-full divide-y divide-gray-200" id="zonesTable">
             <thead class="bg-gray-50">
                 <tr>
